# charset-util

./: .gitignore  README.md  pyproject.toml  requirements.txt  tutorial_demo.py
.github/workflows/: test.yml
src/charset_util/: __init__.py  cli.py  core.py  encoding.py  inspector.py  recovery.py  strategies.py
tests/: __init__.py  test_advanced_recovery.py  test_basic.py  test_decode_escapes.py  test_encoding.py  test_fuzz.py  test_generic_parsing.py  test_mixed_content.py  test_regex_extraction.py  test_specific_case.py  test_suffix_preservation.py  test_user_cases.py
tutorial/: 1_concepts_illustrated.md  2_visualizer.html  3_python_demo.py  4_unicode_escape_demo.py
