[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "charset-util"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A utility package for charset detection and conversion"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "charset-normalizer>=3.0.0",
    "ftfy>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/128645061/charset-util"
"Bug Tracker" = "https://github.com/128645061/charset-util/issues"
